public static class ParamConsts
{
    //Tags
    public const string PLAYER_TAG = "Player";
    public const string GROUND = "Ground";
    public const string ENEMY_TAG = "Enemy";
    public const string BOOMERANG_TAG = "Boomerang";

    public const string JUMP_START = "JumpStart";
    public const string JUMP_END = "JumpEnd";
    public const string IS_MOVE = "IsMove";
    public const string IS_DEAD = "IsDead";

    //Shader
    public const string COLOR = "_Color";
    public const string CIRCLE_RADIUS = "_CircleRadius";
    public const string CENTER_X = "_CenterX";
    public const string CENTER_Y = "_CenterY";
    public const string SMOOTH_THICKNESS = "_SmoothThickness";
}
